# backend-ruta-lince

./: .gitignore  README.md  api_tests.http  config.py  main.py  peticiones.http  pyproject.toml  requirements.txt  ruta_lince_database.sqlite
api/: aprendizaje.py  auth.py  login.py  router.py  salud.py  salud_app.py
api/endpoints/: auth.py
api/v1/: router.py
api/v1/endpoints/: auth.py
core/: config.py  security.py
database/: connection.py  database.py  repository.py
models/: __init__.py  user.py
repositories/: user.py
schemas/: __init__.py  aprendizaje.py  login.py  salud.py  salud_app.py  user.py
scripts/: crear_usuario.py  create_tables.py  engagement.py
services/: auth.py  login_service.py  servicio_aprendizaje.py
src/api/: aprendizaje.py  engagement.py  estudiantes.py  gamificacion.py  login.py  router.py  salud.py  usuarios.py
src/database/: __init__.py  connection.py  database.sqlite  repository.py
src/mock_services/: engagement_service.py  login_service.py  servicio_engagement_mock.py  servicio_estudiantes.py  servicio_gamificacion.py  servicio_salud_app.py
src/models/: __init__.py  models.py
src/schemas/: __init__.py  aprendizaje.py  engagement.py  gamificacion.py  login_schemas.py  salud.py  usuario_schemas.py
src/services/: login_service.py  servicio_aprendizaje.py  servicio_usuarios.py
src/servicios/: engagement.py  login_service.py  servicio_estudiantes.py
