[project]
name = "backend-ruta-lince"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.1",
    "fastapi>=0.121.2",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-jose==3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel==0.0.27",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.0.1",
]
